plugins {
    id 'java'
}

group = 'MBRound18.hytale'
version = '0.1.0'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

dependencies {
    compileOnly files("${rootProject.projectDir}/data/server/Server/HytaleServer.jar")
    compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
    compileOnly 'org.slf4j:slf4j-api:2.0.7'
    implementation 'com.google.code.gson:gson:2.11.0'
    testImplementation 'junit:junit:4.13.2'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    dependsOn(rootProject.tasks.named("ensureServerJar"))
}

jar {
    archiveBaseName.set("UpnpForwarder")
    manifest {
        attributes(
                'Plugin-Main': 'MBRound18.hytale.forwarder.UpnpForwarderPlugin',
                'Plugin-Name': 'UpnpForwarder',
                'Plugin-Version': project.version,
                'Implementation-Title': 'UpnpForwarder',
                'Implementation-Version': project.version
        )
    }
}

def authorsJsonProvider = project.objects.property(String)
authorsJsonProvider.convention("""[
  {
    "Name": "Example Dev",
    "Email": "dev@example.com",
    "Url": ""
  }
]""")

tasks.register("generateAuthors") {
    group = "build"
    description = "Extract commit authors from git history"
    def authorsOutput = authorsJsonProvider
    doLast {
        def authorsJson = "[]"
        try {
            def gitProcess = new ProcessBuilder(["git", "log", "--format=%an|%ae"]).redirectErrorStream(true).start()
            def gitLog = new StringBuilder()
            gitProcess.inputStream.newReader().eachLine { line ->
                gitLog.append(line).append('\n')
            }
            int gitExit = gitProcess.waitFor()
            def authors = gitLog.toString().readLines()
                .collect { it.split("\\|") }
                .findAll { it.size() == 2 }
                .collect { [name: it[0].trim(), email: it[1].trim()] }
                .unique { [it.name, it.email] }

            if (gitExit != 0) {
                logger.warn("git log exited with code ${gitExit}; falling back to default author")
            }
            if (authors.isEmpty()) {
                authors = [[name: "Example Dev", email: "dev@example.com"]]
            }

            // Build JSON manually to avoid Groovy imports
            def entries = authors.collect { author ->
                """  {
    "Name": "${author.name}",
    "Email": "${author.email}",
    "Url": ""
  }"""
            }.join(',\n')
            authorsJson = "[\n${entries}\n]"
        } catch (Exception e) {
            logger.warn("Failed to extract git authors: ${e.message}")
            authorsJson = """[
  {
    "Name": "Example Dev",
    "Email": "dev@example.com",
    "Url": ""
  }
]"""
        }
        authorsOutput.set(authorsJson)
    }
}

processResources {
    dependsOn "generateAuthors"
    def authorsJson = authorsJsonProvider
    filesMatching('plugin.properties') {
        expand(version: project.version)
    }
    filesMatching('manifest.json') {
        expand(version: project.version)
        filter { line ->
            line.replace('"GRADLE_INJECT_AUTHORS"', authorsJson.get())
        }
    }
}
